--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Balance Sheet</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="home_title_top">My Monthly Chart</string>
     <string name="action_settings">Settings</string>
     <string name="imageMic">image of mic</string>
 </resources>
