--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="home_title_top">My Monthly Chart</string>
     <string name="action_settings">Settings</string>
     <string name="imageMic">image of mic</string>
+    <string name="need_sign_in">You need to give permission to use this app</string>
 </resources>
