--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="imageMic">image of mic</string>
     <string name="need_sign_in">You need to give permission to use this app</string>
+    <string name="select_account_btn">Select Account</string>
+    <string name="select_account_desc">Press Select Account and select the appropriate account associated with your table.\n
+    \n You can see your table on the next screen.
+    </string>
 </resources>
