--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Graph It</string>
     <string name="home_title_top">My Monthly Chart</string>
+    <string name="main_dialog_title">Choose Your Google Account</string>
     <string name="action_settings">Settings</string>
     <string name="imageMic">image of mic</string>
     <string name="need_sign_in">You need to give permission to use this app</string>
