Added methods to get user input for table information. Added Parcelable methods

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="imageMic">image of mic</string>
     <string name="need_sign_in">You need to give permission to use this app</string>
     <string name="select_account_btn">Select Account</string>
-    <string name="select_account_desc">Press Select Account and select the appropriate account associated with your table.\n
+    <string name="select_account_desc">Press Select Account and input necessary information associated with your table.\n
     \n You can see your table on the next screen.
     </string>
 </resources>
